--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -1,6 +1,9 @@
 format_version: 2
 pipelines:
   pipeline_code_demo:
+    environment_variables:
+      PROJECT: null
+      RELEASE: null
     group: defaultGroup
     materials:
       backend:
