--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -19,7 +19,7 @@ pipelines:
                     run_if: passed
                     command: echo
                     arguments:
-                    - Build #{PROJECT} #{RELEASE}
+                    - #{PROJECT}
       - Test:
           clean_workspace: true
           jobs:
@@ -29,7 +29,7 @@ pipelines:
                     run_if: passed
                     command: echo
                     arguments:
-                    - Test #{PROJECT} #{RELEASE}
+                    - #{RELEASE}
       - Deploy:
           clean_workspace: true
           jobs:
@@ -39,4 +39,4 @@ pipelines:
                     run_if: passed
                     command: echo
                     arguments:
-                    - Deploy #{PROJECT} #{RELEASE}
+                    - #{PROJECT} #{RELEASE}
