adding env vars

--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -43,3 +43,14 @@ pipelines:
                     command: echo
                     arguments:
                     - $PROJECT $RELEASE
+      - Debug:
+          clean_workspace: true
+          jobs:
+            build_task:
+              tasks:
+                - exec:
+                    run_if: passed
+                    command: echo
+                    arguments:
+                    - $PROJECT $RELEASE
+
