--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -21,4 +21,4 @@ pipelines:
                     command: sh
                     arguments:
                     - -c
-                    - echo ${PROJECT} ${RELEASE}
+                    - echo ${PROJECT} ${RELEASE} ${ENV}
