--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -23,6 +23,11 @@ pipelines:
                 - build:
                     source: project
               tasks:
+                  - exec:
+                    command: echo
+                    arguments:
+                      - $RELEASE 
+                      - $ENV
                 - exec:
                     command: python3
                     arguments:
