--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -37,3 +37,30 @@ pipelines:
                     command: cat
                     arguments:
                       - project/example.yaml
+                - exec:
+                    command: sh 
+                    arguments: 
+                      - -c
+                      - git                
+                      - --git-dir=project/.git
+                      - --work-tree=project
+                      - add
+                      - example.yaml
+                - exec:
+                    command: sh
+                    arguments: 
+                      - -c
+                      - git                     
+                      - --git-dir=project/.git
+                      - --work-tree=project
+                      - commit
+                      - -m
+                      - ${RELEASE} ${ENV}
+                - exec:
+                    command: sh
+                    arguments: 
+                      - -c
+                      - git                     
+                      - --git-dir=project/.git
+                      - --work-tree=project
+                      - push
