--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -41,26 +41,14 @@ pipelines:
                     command: sh 
                     arguments: 
                       - -c
-                      - git                
-                      - --git-dir=project/.git
-                      - --work-tree=project
-                      - add
-                      - example.yaml
+                      - git --git-dir=project/.git --work-tree=project add example.yaml
                 - exec:
                     command: sh
                     arguments: 
                       - -c
-                      - git                     
-                      - --git-dir=project/.git
-                      - --work-tree=project
-                      - commit
-                      - -m
-                      - ${RELEASE} ${ENV}
+                      - git --git-dir=project/.git --work-tree=project commit -m ${RELEASE} ${ENV}
                 - exec:
                     command: sh
                     arguments: 
                       - -c
-                      - git                     
-                      - --git-dir=project/.git
-                      - --work-tree=project
-                      - push
+                      - git --git-dir=project/.git --work-tree=project push
